--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -517,6 +517,7 @@
           <ul>
             <li><a href="https://en-uk.sennheiser.com/ambeo-mobility"><i><b>Sennheiser AMBEO Mobility</b></i></a></li>
             <li><a href="https://professional.dolby.com/music/dolby-atmos-for-cars/"><i><b>Dolby Atmos for Cars</b></i></a></li>
+            <li><a href="https://www.dirac.com/dirac-for-business/automotive/"><i><b>Dirac Automotive Audio</b></i></a></li>
             <li><a href="https://automotive.bose.com/road-ahead/active-sound-management#electric-vehicle-sound-enhancement"><i><b>Bose - Active Sound Management</b></i></a></li>
             <li><a href="https://www.idmt.fraunhofer.de/en/institute/projects-products/spatialsound-wave-automotive-audio.html"><i><b>Fraunhofer - Spatialsound Wave Automotive Audio</b></i></a></li>
             <li><a href="https://www.audiokinetic.com/en/solutions/automotive/"><i><b>AudioKinetic - Wwise Automotive</b></i></a></li>
