--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -125,6 +125,7 @@
               <ul>
                 <li><a href="" target="_blank"><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
                 <li><a href="" target="_blank"><b>Statistical Descriptors</b></a></li>
+                <li><a href="" target="_blank"><b>Setup of Virtual Enviroment</b></a></li>
               </ul>
               <li><a href="" target="_blank"><b>Stage 3: In-situ Installation</b></a></li>
             </ul>
@@ -380,6 +381,21 @@
               amplification at 10 meters away.
               G >= -4dB for rooms intended for music; G >= +4dB for rooms intended for speech (intelligibility).</li>
           </ul>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <h5>Setup of Virtual Enviroment</h5>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+
           </p>
         </div>
       </div>
