--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -98,14 +98,6 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <br>
-          <br>
-          <p class="mbr-text mbr-fonts-style display-7">
-            The purpose of this handbook is to bring notions, tips and possible solutions litteraly to the hand of the sound engineers while approaching to the automotive immersive sound tuning.
-            This text is an historycal and technical summary of the most relevant articles, books, papers and general notions related to acoustics, sound engineering and sound design.
-            We will frequently refer to the material mentioned above; it's not a purpose of this book to leave the readers fully informed about all the touched topics, infact we will frequenctly redirect them to the original source for futher
-            studies.
-            On the other hand, this text will focus over results, solutions, conclusions and perspecives in order to give an immediate view of the state of arts and to provide a practical approach to the matter.
           <h4 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
             <br>
             <br>
@@ -138,6 +130,33 @@
     </div>
   </section>
 
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Abstract</strong></h4>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            The purpose of this handbook is to bring notions, tips and possible solutions litteraly to the hand of the sound engineers while approaching to the automotive immersive sound tuning.
+            This text is an historycal and technical summary of the most relevant articles, books, papers and general notions related to acoustics, sound engineering and sound design.
+            It will frequently refer to the material mentioned above; it's not a purpose of this book to leave the readers fully informed about all the touched topics, infact we will frequenctly redirect them to the original source for futher
+            studies.
+            On the other hand, this text will focus over results, solutions, conclusions and perspecives in order to give an immediate view of the state of arts and to provide a practical approach to the matter.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Title-->
   <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
