--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -105,6 +105,7 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
+            <li><a href="" target="_blank"><b>Abstract</b></a></li>
             <li><a href="content4-1b" target="_blank"><b>Soundscape Design Developement</b></a></li>
             <ul>
               <li><a href="" target="_blank"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
