--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -105,22 +105,22 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="#abstract" target="_blank"><b>Abstract</b></a></li>
-            <li><a href="content4-1b" target="_blank"><b>Soundscape Design Developement</b></a></li>
+            <li><a href="#abstract"><b>Abstract</b></a></li>
+            <li><a href="#soundscape_design_dev"><b>Soundscape Design Developement</b></a></li>
             <ul>
-              <li><a href="" target="_blank"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
+              <li><a href=""><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
               <ul>
-                <li><a href="" target="_blank"><b>Definition of Automotive Sound Targets</b></a></li>
-                <li><a href="" target="_blank"><b>Impulse Response Capture</b></a></li>
-                <li><a href="" target="_blank"><b>Multichannel Recording Solutions</b></a></li>
+                <li><a href=""><b>Definition of Automotive Sound Targets</b></a></li>
+                <li><a href=""><b>Impulse Response Capture</b></a></li>
+                <li><a href=""><b>Multichannel Recording Solutions</b></a></li>
               </ul>
-              <li><a href="" target="_blank"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
+              <li><a href=""><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
               <ul>
-                <li><a href="" target="_blank"><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
-                <li><a href="" target="_blank"><b>Statistical Descriptors</b></a></li>
-                <li><a href="" target="_blank"><b>Setup of Virtual Enviroment</b></a></li>
+                <li><a href=""><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
+                <li><a href=""><b>Statistical Descriptors</b></a></li>
+                <li><a href=""><b>Setup of Virtual Enviroment</b></a></li>
               </ul>
-              <li><a href="" target="_blank"><b>Stage 3: In-situ Installation</b></a></li>
+              <li><a href=""><b>Stage 3: In-situ Installation</b></a></li>
             </ul>
 
           </ul>
@@ -143,7 +143,7 @@
   </section>
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="abstract_txt">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -160,7 +160,7 @@
   </section>
 
   <!-- Title-->
-  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="content4-1b">
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
