--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -108,21 +108,23 @@
             <li><a href="#abstract"><b>Abstract</b></a></li>
             <li><a href="#soundscape_design_dev"><b>Soundscape Design Developement</b></a></li>
             <ul>
-              <li><a href=""><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
+              <li><a href="#stage1"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
               <ul>
-                <li><a href=""><b>Definition of Automotive Sound Targets</b></a></li>
-                <li><a href=""><b>Impulse Response Capture</b></a></li>
-                <li><a href=""><b>Multichannel Recording Solutions</b></a></li>
+                <li><a href="#targets"><b>Definition of Automotive Sound Targets</b></a></li>
+                <li><a href="#ir"><b>Impulse Response Capture</b></a></li>
+                <li><a href="#multi_rec_sol"><b>Multichannel Recording Solutions</b></a></li>
               </ul>
-              <li><a href=""><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
+              <li><a href="#stage2"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
               <ul>
-                <li><a href=""><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
-                <li><a href=""><b>Statistical Descriptors</b></a></li>
-                <li><a href=""><b>Setup of Virtual Enviroment</b></a></li>
+                <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
+                <li><a href="#stat_desc"><b>Statistical Descriptors</b></a></li>
+                <li><a href="#setup_ve"><b>Setup of Virtual Enviroment</b></a></li>
               </ul>
-              <li><a href=""><b>Stage 3: In-situ Installation</b></a></li>
+              <li><a href="#stage3"><b>Stage 3: In-situ Installation</b></a></li>
             </ul>
-
+            <li><a href="#appendix"><b>Appendix</b></a></li>
+            <li><a href="#biblio"><b>Bibliography</b></a></li>
+            <li><a href="#web"><b>Webography</b></a></li>
           </ul>
 
           </p>
@@ -201,7 +203,7 @@
   </section>
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage1">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -218,7 +220,7 @@
 
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="targets">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -241,7 +243,7 @@
   </section>
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="ir">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -277,7 +279,7 @@
   </section>
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="multi_rec_sol">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -304,7 +306,7 @@
   </section>
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage2">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -320,7 +322,7 @@
 
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="anal_cabin">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -340,7 +342,7 @@
   </section>
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stat_desc">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -408,7 +410,7 @@
   </section>
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -423,7 +425,7 @@
   </section>
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage3">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
@@ -440,7 +442,7 @@
 
   <!-- Appendix-->
 
-  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="appendix">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
@@ -472,7 +474,7 @@
 
   <!-- Bibliografia-->
 
-  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="biblio">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
@@ -539,7 +541,7 @@
 
   <!-- Webografia-->
 
-  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
+  <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="web">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
