--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -532,6 +532,8 @@
             <li><a href="http://pcfarina.eng.unipr.it/Public/I3DA-2021/Low_Frequency_Simulations_for_Ambisonics_Auralization_of_a_Car_Sound_System.pdf"><i><b>2021, A. Farina, D. Pinardi, J-S. Park - "Low Frequency Simulations for Ambisonics
                     Auralization of
                     a Car Sound System"</b></i></a></li>
+            <li><a href="https://www.researchgate.net/publication/372442566_Analysis_by_synthesis_of_engine_sounds_for_the_design_of_dynamic_auditory_feedback_of_electric_vehicles"><i><b>2023, T. Dupré, S. Denjean, M. Aramaki, R. Kronland-Martinet -
+                    "Analysis by synthesis of engine sounds for the design of dynamic auditory feedback of electric vehicles"</b></i></a></li>
           </ul>
           </p>
         </div>
