--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -108,10 +108,13 @@
             <li><a href="#abstract"><b>Abstract</b></a></li>
             <li><a href="#soundscape_design_dev"><b>Soundscape Design Developement</b></a></li>
             <ul>
-              <li><a href="#stage1"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
+              <li><a href="#pre"><b>Pre: Project Strategy Design</b></a></li>
               <ul>
                 <li><a href="#targets"><b>Definition of Automotive Sound Targets</b></a></li>
-                <li><a href="#ir"><b>Impulse Response Capture</b></a></li>
+                <li><a href="#ir"><b>Impulse Response Positions and Conditions</b></a></li>
+              </ul>
+              <li><a href="#stage1"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
+              <ul>
                 <li><a href="#multi_rec_sol"><b>Multichannel Recording Solutions</b></a></li>
               </ul>
               <li><a href="#stage2"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
@@ -203,23 +206,6 @@
   </section>
 
   <!-- Text-->
-  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage1">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-12 col-lg-8">
-          <h3>Stage 1: Acoustic Fingerprint of the Vehicle</h3>
-          <br>
-          <p class="mbr-text mbr-fonts-style display-7">
-            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ and open road sounds of the vehicle.
-            Specifing the targets of those captures is essential to guarantee a smooth and on focus study during the stage 2.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="targets">
     <div class="container">
       <div class="row justify-content-center">
@@ -256,12 +242,6 @@
             i.e. when some time has passed and the system has settled.
             <br>
             <br>
-            In summary, the approach to the study of an environment through the analysis of its natural modes is true and is valid for the stationarity conditions of that system,
-            i.e. when sufficient time has passed for the family of standing waves to have established itself at interior between the two walls.
-            The impulse response still has all the information of the system,
-            but when obtaining the frequency response, only those relating to the stationary part of the system can be seen.
-            <br>
-            <br>
             Three approaches for the acousttic analysis are described:
             <br>
             <br>
@@ -277,6 +257,23 @@
       </div>
     </div>
   </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage1">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <h3>Stage 1: Acoustic Fingerprint of the Vehicle</h3>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+            During the first stage of the soundscape design developement the engineers will capture all the usefull in-situ and open road sounds of the vehicle.
+            Specifing the targets of those captures is essential to guarantee a smooth and on focus study during the stage 2.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="multi_rec_sol">
