--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -121,6 +121,7 @@
               <ul>
                 <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
                 <li><a href="#stat_desc"><b>Statistical Descriptors</b></a></li>
+                <li><a href="#setup_ve"><b>Abstraction of the </b></a></li>
                 <li><a href="#setup_ve"><b>Setup of Virtual Enviroment</b></a></li>
               </ul>
               <li><a href="#stage3"><b>Stage 3: In-situ Installation</b></a></li>
@@ -494,6 +495,7 @@
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>1996, M. Giordano - "Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili"</b></i></a>
             </li>
             <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>2001, S. Muller, P. Massarani - "Transfer-Function Measurement with Sweeps"</b></i></a></li>
+            <li><a href="http://www.jtdweb.org/journal/2003/001_ando.pdf"><i><b>2003, Y. Ando - "Investigations on Cerebral Hemisphere Activities Related to Subjective Preference of the Sound Field"</b></i></a></li>
             <li><a href="https://www.researchgate.net/publication/237067964_Directional_Audio_Coding_in_Spatial_Sound_Reproduction_and_Stereo_Upmixing"><i><b>2006, V. Pulkki - "Directional Audio Coding in Spatial Sound Reproduction and Stereo
                     Upmixing"</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>2009, F. A. Everest, K. C. Pohlmann - "Master Handbook of Acoustics"</b></i></a></li>
