--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -121,10 +121,15 @@
               <ul>
                 <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
                 <li><a href="#stat_desc"><b>Statistical Descriptors</b></a></li>
-                <li><a href="#setup_ve"><b>Abstraction of the </b></a></li>
                 <li><a href="#setup_ve"><b>Setup of Virtual Enviroment</b></a></li>
+                <li><a href="#anal_cabin"><b>Analysis of the Target Sound Captures inside the Virtual Enviroment</b></a></li>
+                <li><a href="#setup_ve"><b>Syntesis of Digital Sounds</b></a></li>
+                <li><a href="#setup_ve"><b>Tuning and Integration of Different Sound Reproduction Systems</b></a></li>
+                <li><a href="#setup_ve"><b>Global Tuning</b></a></li>
               </ul>
               <li><a href="#stage3"><b>Stage 3: In-situ Installation</b></a></li>
+              <ul>
+              <li><a href="#setup_ve"><b>Tests</b></a></li>
             </ul>
             <li><a href="#appendix"><b>Appendix</b></a></li>
             <li><a href="#biblio"><b>Bibliography</b></a></li>
