--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -120,11 +120,11 @@
               <li><a href="#stage2"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
               <ul>
                 <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
-                <li><a href="#stat_desc"><b>Statistical Descriptors</b></a></li>
+                <li><a href="#stat_desc"><b>Evaluation of the Statistical Descriptors</b></a></li>
                 <li><a href="#setup_ve"><b>Setup of Virtual Enviroment</b></a></li>
                 <li><a href="#anal_cabin"><b>Analysis of the Target Sound Captures inside the Virtual Enviroment</b></a></li>
                 <li><a href="#setup_ve"><b>Syntesis of Digital Sounds</b></a></li>
-                <li><a href="#setup_ve"><b>Tuning and Integration of Different Sound Reproduction Systems</b></a></li>
+                <li><a href="#setup_ve"><b>Integration and Tuning of Different Sound Reproduction Systems</b></a></li>
                 <li><a href="#setup_ve"><b>Global Tuning</b></a></li>
               </ul>
               <li><a href="#stage3"><b>Stage 3: In-situ Installation</b></a></li>
@@ -349,7 +349,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
-          <h5>Statistical Descriptors</h5>
+          <h5>Evaluation of the Statistical Descriptors</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul class="mbr-text mbr-fonts-style display-7">
@@ -428,6 +428,62 @@
   </section>
 
   <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <h5>Analysis of the Target Sound Captures inside the Virtual Enviroment</h5>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-12 col-lg-8">
+            <h5>Syntesis of Digital Sounds</h5>
+            <br>
+            <p class="mbr-text mbr-fonts-style display-7">
+
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Text-->
+      <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+              <h5>Integration and Tuning of Different Sound Reproduction Systems</h5>
+              <br>
+              <p class="mbr-text mbr-fonts-style display-7">
+
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Text-->
+        <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-8">
+                <h5>Global Tuning</h5>
+                <br>
+                <p class="mbr-text mbr-fonts-style display-7">
+
+                </p>
+              </div>
+            </div>
+          </div>
+
+  <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="stage3">
     <div class="container">
       <div class="row justify-content-center">
@@ -442,6 +498,20 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="setup_ve">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <h5>Tests</h5>
+          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Appendix-->
 
