--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -131,6 +131,10 @@
               <ul>
               <li><a href="#setup_ve"><b>Tests</b></a></li>
             </ul>
+            Safety & Security
+            Sensors & AI
+            Perceptive analysis because humans are synesthetics and work through complex cerebral maps that combine all the senses (ex: the visual helps to identify a moving source)
+
             <li><a href="#appendix"><b>Appendix</b></a></li>
             <li><a href="#biblio"><b>Bibliography</b></a></li>
             <li><a href="#web"><b>Webography</b></a></li>
@@ -353,7 +357,11 @@
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul class="mbr-text mbr-fonts-style display-7">
-            <li><b>ITDG (Initial time delay gap):</b> delay time of the first reflection, i.e. the time between the direct sound and the first reflection.
+            <li><b>RT60 (Reverberation time):</b> time required for the impulse response to decay by 60 dB.</li>
+            <li><b>T10, T20, T30:</b> similar to RT60 but with different times used to evaluate the homogeneity of the IR.</li>
+            <li><b>EDT (Early Decay Time):</b> reference time of the first reflections.</li>
+            <li><b>Schroeder Frequency:</b> frequency above which the statistical approach makes more sense as the field behaves in a diffuse manner.</li>
+            <li><b>ITDG (Initial Time Delay Gap):</b> delay time of the first reflection, i.e. the time between the direct sound and the first reflection.
               Assuming of course that there is direct sound.
               The optimal values ​​for the ITDG vary depending on the space.
               Typically for speech, an ITDG of less than 50ms is preferred. Magic value for ITDG is around 30 ms.</li>
@@ -405,6 +413,7 @@
               there is a standard that defines two possible measurement criteria for this acoustic reinforcement index: background noise and the energy that arrives from the amplified source in relation to the energy that arrives without
               amplification at 10 meters away.
               G >= -4dB for rooms intended for music; G >= +4dB for rooms intended for speech (intelligibility).</li>
+              <li><b>IACC (Inter Aural Cross Correlation):</b></li>
           </ul>
           </p>
         </div>
