--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -222,7 +222,7 @@
         <div class="col-md-12 col-lg-8">
           <h5>Definition of Automotive Sound Targets</h5>
           <br>
-          Some of the most important automotive sound targets are listed below:
+          Resonator and Exciter. Some of the most important automotive sound targets are listed below:
           <br>
           <br>
           <ul>
