--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -123,13 +123,13 @@
                 <li><a href="#stat_desc"><b>Evaluation of the Statistical Descriptors</b></a></li>
                 <li><a href="#setup_ve"><b>Setup of Virtual Enviroment</b></a></li>
                 <li><a href="#anal_cabin"><b>Analysis of the Target Sound Captures inside the Virtual Enviroment</b></a></li>
-                <li><a href="#setup_ve"><b>Syntesis of Digital Sounds</b></a></li>
-                <li><a href="#setup_ve"><b>Integration and Tuning of Different Sound Reproduction Systems</b></a></li>
-                <li><a href="#setup_ve"><b>Global Tuning</b></a></li>
+                <li><a href="#synthesis"><b>Synthesis of Digital Sounds</b></a></li>
+                <li><a href="#rep_sys"><b>Combination and Tuning of Different Sound Reproduction Systems</b></a></li>
+                <li><a href="#global_tuning"><b>Global Tuning</b></a></li>
               </ul>
               <li><a href="#stage3"><b>Stage 3: In-situ Installation</b></a></li>
               <ul>
-              <li><a href="#setup_ve"><b>Tests</b></a></li>
+              <li><a href="#tests"><b>Tests</b></a></li>
             </ul>
             Safety & Security
             Sensors & AI
