--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -185,6 +185,69 @@
     </div>
   </section>
 
+  <section data-bs-version="5.1" class="features23 cid-tX2xYqQbjn" id="features23-c">
+    <div class="container">
+        <!-- col-12 col-md-6 col-lg-4 -->
+        <div class="row justify-content-center content-row mt-4">
+            <div class="card p-4 p-md-3 col-md-6 col-lg-3">
+                <div class="card-box">
+                    <div class="title">
+                        <span class="num mbr-fonts-style display-1"><strong>Pre</strong></span>
+                    </div>
+                    <h4 class="card-title mbr-fonts-style display-5">
+                        <strong>Project Strategy Design</strong>
+                    </h4>
+                    <p class="mbr-text card-text mbr-fonts-style display-7">
+                        Mobirise is perfect for non-techies who are not familiar with the intricacies of web
+                        development.
+                    </p>
+                </div>
+            </div>
+            <div class="card p-4 p-md-3 col-md-6 col-lg-3">
+                <div class="card-box">
+                    <div class="title">
+                        <span class="num mbr-fonts-style display-1"><strong>01.</strong></span>
+                    </div>
+                    <h4 class="card-title mbr-fonts-style display-5">
+                        <strong>Acoustic Fingerprint of the Vehicle</strong>
+                    </h4>
+                    <p class="mbr-text card-text mbr-fonts-style display-7">
+                        Mobirise is perfect for non-techies who are not familiar with the intricacies of web
+                        development.
+                    </p>
+                </div>
+            </div>
+            <div class="card p-4 p-md-3 col-md-6 col-lg-3">
+                <div class="card-box">
+                    <div class="title">
+                        <span class="num mbr-fonts-style display-1"><strong>02.</strong></span>
+                    </div>
+                    <h4 class="card-title mbr-fonts-style display-5">
+                        <strong>Studies over the Virtual Acoustic Enviroment</strong>
+                    </h4>
+                    <p class="mbr-text card-text mbr-fonts-style display-7">
+                        Mobirise is perfect for non-techies who are not familiar with the intricacies of web
+                        development.
+                    </p>
+                </div>
+            </div>
+            <div class="card p-4 p-md-3 col-md-6 col-lg-3">
+                <div class="card-box">
+                    <div class="title">
+                        <span class="num mbr-fonts-style display-1"><strong>03.</strong></span>
+                    </div>
+                    <h4 class="card-title mbr-fonts-style display-5">
+                        <strong>In-situ Installation</strong>
+                    </h4>
+                    <p class="mbr-text card-text mbr-fonts-style display-7">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
     <div class="container">
