--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -108,16 +108,16 @@
             <li><a href="#abstract"><b>Abstract</b></a></li>
             <li><a href="#soundscape_design_dev"><b>Soundscape Design Developement</b></a></li>
             <ul>
-              <li><a href="#pre"><b>Pre: Project Strategy Design</b></a></li>
+              <li><a href="#pre"><b>Pre. Project Strategy Design</b></a></li>
               <ul>
                 <li><a href="#targets"><b>Definition of Automotive Sound Targets</b></a></li>
                 <li><a href="#ir"><b>Impulse Response Positions and Conditions</b></a></li>
               </ul>
-              <li><a href="#stage1"><b>Stage 1: Acoustic Fingerprint of the Vehicle</b></a></li>
+              <li><a href="#stage1"><b>01. Vehicle Acoustic Fingerprint</b></a></li>
               <ul>
                 <li><a href="#multi_rec_sol"><b>Multichannel Recording Solutions</b></a></li>
               </ul>
-              <li><a href="#stage2"><b>Stage 2: Studies over the Virtual Acoustic Enviroment</b></a></li>
+              <li><a href="#stage2"><b>02. Studies over the Virtual Acoustic Enviroment</b></a></li>
               <ul>
                 <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
                 <li><a href="#stat_desc"><b>Evaluation of the Statistical Descriptors</b></a></li>
@@ -127,7 +127,7 @@
                 <li><a href="#rep_sys"><b>Combination and Tuning of Different Sound Reproduction Systems</b></a></li>
                 <li><a href="#global_tuning"><b>Global Tuning</b></a></li>
               </ul>
-              <li><a href="#stage3"><b>Stage 3: In-situ Installation</b></a></li>
+              <li><a href="#stage3"><b>03. In-situ Installation</b></a></li>
               <ul>
               <li><a href="#tests"><b>Tests</b></a></li>
             </ul>
@@ -209,7 +209,7 @@
                         <span class="num mbr-fonts-style display-1"><strong>01.</strong></span>
                     </div>
                     <h4 class="card-title mbr-fonts-style display-5">
-                        <strong>Acoustic Fingerprint of the Vehicle</strong>
+                        <strong>Vehicle Acoustic Fingerprint</strong>
                     </h4>
                     <p class="mbr-text card-text mbr-fonts-style display-7">
                         Mobirise is perfect for non-techies who are not familiar with the intricacies of web
