--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -113,7 +113,7 @@
                 <li><a href="#targets"><b>Definition of Automotive Sound Targets</b></a></li>
                 <li><a href="#ir"><b>Impulse Response Positions and Conditions</b></a></li>
               </ul>
-              <li><a href="#stage1"><b>01. Vehicle Acoustic Fingerprint</b></a></li>
+              <li><a href="#stage1"><b>01. Acoustic Fingerprint of the Vehicle</b></a></li>
               <ul>
                 <li><a href="#multi_rec_sol"><b>Multichannel Recording Solutions</b></a></li>
               </ul>
@@ -209,7 +209,7 @@
                         <span class="num mbr-fonts-style display-1"><strong>01.</strong></span>
                     </div>
                     <h4 class="card-title mbr-fonts-style display-5">
-                        <strong>Vehicle Acoustic Fingerprint</strong>
+                        <strong>Acoustic Fingerprint of the Vehicle</strong>
                     </h4>
                     <p class="mbr-text card-text mbr-fonts-style display-7">
                       <br>
