--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -185,6 +185,19 @@
     </div>
   </section>
 
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/site/idea.webp" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section data-bs-version="5.1" class="features23 cid-tX2xYqQbjn" id="features23-c">
     <div class="container">
         <!-- col-12 col-md-6 col-lg-4 -->
