--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -209,11 +209,13 @@
             </div>
             <h4 class="card-title mbr-fonts-style display-5">
               <strong>Project Strategy Design<br>
-              <br></strong>
+                <br></strong>
             </h4>
             <p class="mbr-text card-text mbr-fonts-style display-7">
-              Mobirise is perfect for non-techies who are not familiar with the intricacies of web
-              development.
+            <ul>
+              <li>Definition of Automotive Sound Targets</li>
+              <li>Impulse Response Positions and Conditions</li>
+            </ul>
             </p>
           </div>
         </div>
