--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -229,8 +229,9 @@
             </h4>
             <p class="mbr-text card-text mbr-fonts-style display-7">
               <br>
-              Mobirise is perfect for non-techies who are not familiar with the intricacies of web
-              development.
+              <ul>
+                <li>Multichannel Recording Solutions</li>
+              </ul>
             </p>
           </div>
         </div>
