--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -229,9 +229,9 @@
             </h4>
             <p class="mbr-text card-text mbr-fonts-style display-7">
               <br>
-              <ul>
-                <li>Multichannel Recording Solutions</li>
-              </ul>
+            <ul>
+              <li>Multichannel Recording Solutions</li>
+            </ul>
             </p>
           </div>
         </div>
@@ -244,8 +244,12 @@
               <strong>Studies over the Virtual Acoustic Enviroment</strong>
             </h4>
             <p class="mbr-text card-text mbr-fonts-style display-7">
-              Mobirise is perfect for non-techies who are not familiar with the intricacies of web
-              development.
+            <ul>
+              <li>Analysis</li>
+              <li>Virtual Environment Implementation</li>
+              <li>Synthesis</li>
+              <li>Tuning</li>
+            </ul>
             </p>
           </div>
         </div>
@@ -259,7 +263,9 @@
                 <br></strong>
             </h4>
             <p class="mbr-text card-text mbr-fonts-style display-7">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            <ul>
+              <li>Tests</li>
+            </ul>
             </p>
           </div>
         </div>
