--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -117,12 +117,12 @@
               <ul>
                 <li><a href="#multi_rec_sol"><b>Multichannel Recording Solutions</b></a></li>
               </ul>
-              <li><a href="#stage2"><b>02. Studies over the Virtual Acoustic Enviroment</b></a></li>
+              <li><a href="#stage2"><b>02. Studies over the Virtual Acoustic environment</b></a></li>
               <ul>
-                <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic Enviroment</b></a></li>
+                <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic environment</b></a></li>
                 <li><a href="#stat_desc"><b>Evaluation of the Statistical Descriptors</b></a></li>
-                <li><a href="#setup_ve"><b>Setup of Virtual Enviroment</b></a></li>
-                <li><a href="#anal_cabin"><b>Analysis of the Target Sound Captures inside the Virtual Enviroment</b></a></li>
+                <li><a href="#setup_ve"><b>Setup of Virtual environment</b></a></li>
+                <li><a href="#anal_cabin"><b>Analysis of the Target Sound Captures inside the Virtual environment</b></a></li>
                 <li><a href="#synthesis"><b>Synthesis of Digital Sounds</b></a></li>
                 <li><a href="#rep_sys"><b>Combination and Tuning of Different Sound Reproduction Systems</b></a></li>
                 <li><a href="#global_tuning"><b>Global Tuning</b></a></li>
@@ -240,7 +240,7 @@
               <span class="num mbr-fonts-style display-1"><strong>02.</strong></span>
             </div>
             <h4 class="card-title mbr-fonts-style display-5">
-              <strong>Studies over the Virtual Acoustic Enviroment</strong>
+              <strong>Studies over the Virtual Acoustic environment</strong>
             </h4>
             <p class="mbr-text card-text mbr-fonts-style display-7">
             <ul>
@@ -283,7 +283,7 @@
           <br>
           <br>
           <ul>
-            <li><b>Vehicle Acoustic Enviroment:</b> impulse responses of the cabin</li>
+            <li><b>Vehicle Acoustic environment:</b> impulse responses of the cabin</li>
             <li><b>Vehicle Physical Sounds:</b> tier/road sound, aerodynamic noise</li>
             <li><b>Vehicle Mechanical Sounds:</b> ICE engine noises, vehicle speed, throttle opening, gearswitch, air-conditioning, doors opening and other gadget sounds</li>
             <li><b>Vehicle Electric Sounds:</b> EV engine noises, battery cooling</li>
@@ -374,7 +374,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
-          <h3>Stage 2: Studies over the Virtual Acoustic Enviroment</h3>
+          <h3>Stage 2: Studies over the Virtual Acoustic environment</h3>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
 
@@ -390,7 +390,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
-          <h5>Analysis of the Cabin Acoustic Enviroment</h5>
+          <h5>Analysis of the Cabin Acoustic environment</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
             The statistical analysis approach starts from the fact that the energy in a space is distributed ergotically, i.e. without particular internal organisations.
@@ -483,7 +483,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
-          <h5>Setup of Virtual Enviroment</h5>
+          <h5>Setup of Virtual environment</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
 
@@ -498,7 +498,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
-          <h5>Analysis of the Target Sound Captures inside the Virtual Enviroment</h5>
+          <h5>Analysis of the Target Sound Captures inside the Virtual environment</h5>
           <br>
           <p class="mbr-text mbr-fonts-style display-7">
 
@@ -649,7 +649,7 @@
                             overview of spatial-audio techniques based on psychoacoustics"</b></i></a></li>
                     <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/zotter_frank_ambisonic_2019.pdf"><i><b>2019, F. Zotter, M. Frank - "Ambisonic, A Practical 3D Audio Theory for Recording, Studio Production, Sound Reinforcement, and
                             Virtual Reality"</b></i></a></li>
-                    <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>2021, M. Giordano, G. K. Velitchkova - "Acoustic of Musical Enviroments"</b></i></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>2021, M. Giordano, G. K. Velitchkova - "Acoustic of Musical environments"</b></i></a></li>
                     <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Cafe_OTO_Acoustic_Analysis_of_the_Environment.pdf"><i><b>2022, G. K. Velitchkova - "Cafe OTO, Acoustic Analysis of the Environment"</b></i></a></li>
                   </ul>
                   <h5 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
