--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -117,12 +117,12 @@
               <ul>
                 <li><a href="#multi_rec_sol"><b>Multichannel Recording Solutions</b></a></li>
               </ul>
-              <li><a href="#stage2"><b>02. Studies over the Virtual Acoustic environment</b></a></li>
+              <li><a href="#stage2"><b>02. Studies over the Virtual Acoustic Environment</b></a></li>
               <ul>
-                <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic environment</b></a></li>
+                <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic Environment</b></a></li>
                 <li><a href="#stat_desc"><b>Evaluation of the Statistical Descriptors</b></a></li>
-                <li><a href="#setup_ve"><b>Setup of Virtual environment</b></a></li>
-                <li><a href="#anal_cabin"><b>Analysis of the Target Sound Captures inside the Virtual environment</b></a></li>
+                <li><a href="#setup_ve"><b>Setup of Virtual Environment</b></a></li>
+                <li><a href="#anal_cabin"><b>Analysis of the Target Sound Captures inside the Virtual Environment</b></a></li>
                 <li><a href="#synthesis"><b>Synthesis of Digital Sounds</b></a></li>
                 <li><a href="#rep_sys"><b>Combination and Tuning of Different Sound Reproduction Systems</b></a></li>
                 <li><a href="#global_tuning"><b>Global Tuning</b></a></li>
@@ -240,7 +240,7 @@
               <span class="num mbr-fonts-style display-1"><strong>02.</strong></span>
             </div>
             <h4 class="card-title mbr-fonts-style display-5">
-              <strong>Studies over the Virtual Acoustic environment</strong>
+              <strong>Studies over the Virtual Acoustic Environment</strong>
             </h4>
             <p class="mbr-text card-text mbr-fonts-style display-7">
             <ul>
@@ -278,8 +278,6 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <h5>Definition of Automotive Sound Targets</h5>
-          <br>
-          Resonator and Exciter. Some of the most important automotive sound targets are listed below:
           <br>
           <br>
           <ul>
