--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -231,6 +231,7 @@
             <ul>
               <li>Multichannel Recording Solutions</li>
               <li>Analysis</li>
+              <li>Evaluation</li>
             </ul>
             </p>
           </div>
