--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -186,12 +186,12 @@
   </section>
 
   <!-- Image-->
-  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe1" id="image3-2l">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/site/idea.webp">
+            <img src="https://www.gabrielavelitch.com/img/site/idea.webp" class="center">
           </div>
         </div>
       </div>
