--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -119,7 +119,7 @@
                 <li><a href="#anal_cabin"><b>Analysis of the Cabin Acoustic Environment</b></a></li>
                 <li><a href="#stat_desc"><b>Evaluation of the Statistical Descriptors</b></a></li>
               </ul>
-              <li><a href="#stage2"><b>02. Studies over the Virtual Acoustic Environment</b></a></li>
+              <li><a href="#stage2"><b>02. Virtual Acoustic Environment</b></a></li>
               <ul>
                 <li><a href="#setup_ve"><b>Setup of Virtual Environment</b></a></li>
                 <li><a href="#anal_cabin"><b>Analysis of the Target Sound Captures inside the Virtual Environment</b></a></li>
@@ -242,7 +242,7 @@
               <span class="num mbr-fonts-style display-1"><strong>02.</strong></span>
             </div>
             <h4 class="card-title mbr-fonts-style display-5">
-              <strong>Studies over the Virtual Acoustic Environment</strong>
+              <strong>Virtual Acoustic Environment</strong>
             </h4>
             <p class="mbr-text card-text mbr-fonts-style display-7">
             <ul>
