--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -241,7 +241,7 @@
             <div class="title">
               <span class="num mbr-fonts-style display-1"><strong>02.</strong></span>
             </div>
-            <h4 class="card-title mbr-fonts-style display-5">
+            <h4 class="card-title mbr-fonts-style display-5" style="text-align:left">
               <strong>Virtual Acoustic Environment</strong>
             </h4>
             <p class="mbr-text card-text mbr-fonts-style display-7">
