--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -278,22 +278,19 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Definition of Automotive Sound Targets<</strong></h4>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Definition of Automotive Sound Targets</strong></h4>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Image-->
-  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg-5">
-          <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/automotive_immersive_sound/targets.webp">
-          </div>
+  <section data-bs-version="5.1" class="info1 cid-tX6pWBCRXL mbr-fullscreen" id="info1-g">
+    <div class="align-center container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-8">
+            </div>
         </div>
-      </div>
     </div>
   </section>
 
