--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -273,16 +273,6 @@
     </div>
   </section>
 
-  <!-- Title-->
-  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="title col-md-12 col-lg-10">
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Definition of Automotive Sound Targets</strong></h4>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Image-->
   <section data-bs-version="5.1" class="info1 cid-tX6pWBCRXL mbr-fullscreen" id="info1-g">
@@ -294,7 +284,18 @@
     </div>
   </section>
 
-<!-- Image-->
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Definition of Automotive Sound Targets</strong></h4>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- List-->
   <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX" id="features2-i">
       <div class="container">
           <div class="row justify-content-center">
