--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -277,10 +277,10 @@
   <!-- Image-->
   <section data-bs-version="5.1" class="info1 cid-tX6pWBCRXL mbr-fullscreen" id="info1-g">
     <div class="align-center container">
-        <div class="row justify-content-center">
-            <div class="col-12 col-lg-8">
-            </div>
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-8">
         </div>
+      </div>
     </div>
   </section>
 
@@ -295,44 +295,48 @@
     </div>
   </section>
 
-<!-- List-->
+  <!-- List-->
   <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX" id="features2-i">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-12 col-md-6 col-lg-3">
-                  <div class="card-wrapper">
-                      <div class="card-box align-center">
-                          <span>
-                            <img src="https://www.gabrielavelitch.com/img/site/wind.svg">
-                          </span>
-                          <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                              <strong>No Coding</strong>
-                          </h4>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-12 col-md-6 col-lg-3">
-                  <div class="card-wrapper">
-                      <div class="card-box align-center">
-                          <span class="mbr-iconfont mobi-mbri-devices mobi-mbri"></span>
-                          <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                              <strong>Mobile Friendly</strong>
-                          </h4>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-12 col-md-6 col-lg-3">
-                  <div class="card-wrapper">
-                      <div class="card-box align-center">
-                          <span class="mbr-iconfont mobi-mbri-website-theme-2 mobi-mbri"></span>
-                          <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                              <strong>Unique </strong><br><br><br><br><br><br><br><br><br><br><strong>Styles</strong><br><strong><br></strong>
-                          </h4>
-                      </div>
-                  </div>
-              </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <span>
+                <img src="https://www.gabrielavelitch.com/img/site/wind.svg">
+              </span>
+              <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
+                <strong>No Coding</strong>
+              </h4>
+            </div>
           </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <span>
+                <img src="https://www.gabrielavelitch.com/img/site/mechanical.svg">
+              </span>
+              <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
+                <strong>Mobile Friendly</strong>
+              </h4>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <span>
+                <img src="https://www.gabrielavelitch.com/img/site/digital_sound.svg">
+              </span>
+              <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
+                <strong>Unique </strong><br><br><br><br><br><br><br><br><br><br><strong>Styles</strong><br><strong><br></strong>
+              </h4>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
   </section>
 
   <!-- Text-->
