--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -306,7 +306,7 @@
                 <img src="https://www.gabrielavelitch.com/img/site/wind.svg">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                <strong>No Coding</strong>
+                <strong>Physical</strong>
               </h4>
             </div>
           </div>
@@ -318,7 +318,7 @@
                 <img src="https://www.gabrielavelitch.com/img/site/mechanical.svg">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                <strong>Mobile Friendly</strong>
+                <strong>Mechanical</strong>
               </h4>
             </div>
           </div>
@@ -327,10 +327,10 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/digital_sound.svg">
+                <img src="https://www.gabrielavelitch.com/img/site/electric.svg">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                <strong>Unique </strong><br><br><br><br><br><br><br><br><br><br><strong>Styles</strong><br><strong><br></strong>
+                <strong>Electrical</strong><br><br><br><br><br><br><br><br><br><br><strong>Styles</strong><br><strong><br></strong>
               </h4>
             </div>
           </div>
