--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -303,7 +303,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/wind.svg">
+                <img src="https://www.gabrielavelitch.com/img/site/wind.svg" style="width:70%">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Physical</strong>
