--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -284,17 +284,6 @@
     </div>
   </section>
 
-  <!-- Title-->
-  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="title col-md-12 col-lg-10">
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Definition of Automotive Sound Targets</strong></h4>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- List-->
   <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX" id="features2-i">
     <div class="container">
@@ -308,6 +297,12 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Physical</strong>
               </h4>
+              <p class="mbr-text card-text mbr-fonts-style display-7">
+              <ul>
+                <li>Aerodynamic noise</li>
+                <li>Tier/road sound</li>
+              </ul>
+              </p>
             </div>
           </div>
         </div>
@@ -338,6 +333,18 @@
       </div>
     </div>
   </section>
+
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Definition of Automotive Sound Targets</strong></h4>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="targets">
