--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -315,6 +315,14 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Mechanical</strong>
               </h4>
+              <p class="mbr-text card-text mbr-fonts-style display-7">
+              <ul>
+                <li>ICE engine system</li>
+                <li>Air-conditioning</li>
+                <li>Doors opening</li>
+                <li>Gadget sounds</li>
+              </ul>
+              </p>
             </div>
           </div>
         </div>
