--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -335,6 +335,12 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Electrical</strong><br><br><br><br><br><br><br><br><br><br><strong>Styles</strong><br><strong><br></strong>
               </h4>
+              <p class="mbr-text card-text mbr-fonts-style display-7">
+              <ul>
+                <li>EV engine system</li>
+                <li>Battery cooling</li>
+              </ul>
+              </p>
             </div>
           </div>
         </div>
