--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -300,7 +300,7 @@
               <p class="mbr-text card-text mbr-fonts-style display-7">
               <ul>
                 <li>Aerodynamic noise</li>
-                <li>Tier/road sound</li>
+                <li>Tier/road</li>
               </ul>
               </p>
             </div>
