--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -191,7 +191,7 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/site/idea.webp" style="width:20%" class="center">
+            <img src="https://www.gabrielavelitch.com/img/site/idea.webp" style="width:20%; align-items: center">
           </div>
         </div>
       </div>
