--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -373,15 +373,10 @@
                 <img src="https://www.gabrielavelitch.com/img/site/1d.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                <strong>Physical</strong>
+                <strong>Modal</strong>
               </h4>
-              <p>
-              <ul class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
-                <li>Aerodynamic noise</li>
-                <li>Tier/road</li>
-                <br>
-                <br>
-              </ul>
+              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
+                Method applies to simple systems such as string, pipe or walls
               </p>
             </div>
           </div>
@@ -393,15 +388,10 @@
                 <img src="https://www.gabrielavelitch.com/img/site/2d.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                <strong>Mechanical</strong>
+                <strong>Geometric</strong>
               </h4>
-              <p>
-              <ul class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
-                <li>ICE engine system</li>
-                <li>Air-conditioning</li>
-                <li>Doors opening</li>
-                <li>Gadget sounds</li>
-              </ul>
+              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
+
               </p>
             </div>
           </div>
@@ -413,15 +403,10 @@
                 <img src="https://www.gabrielavelitch.com/img/site/3d.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                <strong>Electrical</strong>
+                <strong>Diffuse Field</strong>
               </h4>
-              <p>
-              <ul class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
-                <li>EV engine system</li>
-                <li>Battery cooling</li>
-                <br>
-                <br>
-              </ul>
+              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
+
               </p>
             </div>
           </div>
