--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -375,7 +375,7 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Modal</strong>
               </h4>
-              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
+              <p class="mbr-text card-text mbr-fonts-style display-7">
                 Method applies to simple systems such as string, pipe or walls
               </p>
             </div>
@@ -390,7 +390,7 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Geometric</strong>
               </h4>
-              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
+              <p class="mbr-text card-text mbr-fonts-style display-7">
                 Propagation of the acoustic field is treated as if it were governed by rays
               </p>
             </div>
@@ -405,7 +405,7 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Diffuse Field</strong>
               </h4>
-              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
+              <p class="mbr-text card-text mbr-fonts-style display-7">
                 Acoustic field is evaluated through the hypothesis that after some time from the initial conditions, the energy has spread and distributed homogeneously throughout the space
               </p>
             </div>
