--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -442,6 +442,59 @@
     </div>
   </section>
 
+  <!-- List-->
+  <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX1" id="features2-i">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <span>
+                <img src="https://www.gabrielavelitch.com/img/site/1d.svg" style="width:70%; display: inline; align-items: center">
+              </span>
+              <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
+                <strong>Directs</strong>
+              </h4>
+              <p class="mbr-text card-text mbr-fonts-style display-7">
+                Method applies to simple systems such as string, pipe or walls
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <span>
+                <img src="https://www.gabrielavelitch.com/img/site/2d.svg" style="width:70%; display: inline; align-items: center">
+              </span>
+              <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
+                <strong>Parametric</strong>
+              </h4>
+              <p class="mbr-text card-text mbr-fonts-style display-7">
+                Propagation of the acoustic field is treated as if it were governed by rays
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <span>
+                <img src="https://www.gabrielavelitch.com/img/site/3d.svg" style="width:70%; display: inline; align-items: center">
+              </span>
+              <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
+                <strong>Non-parametric</strong>
+              </h4>
+              <p class="mbr-text card-text mbr-fonts-style display-7">
+                Acoustic field is evaluated through the hypothesis that after some time from the initial conditions, the energy has spread and distributed homogeneously throughout the space
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Image-->
   <section data-bs-version="5.1" class="info1 cid-tX6pWBCRXL2 mbr-fullscreen" id="info1-g">
     <div class="align-center container">
