--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -456,7 +456,7 @@
                 <strong>Directs</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
-                Method applies to simple systems such as string, pipe or walls
+                Manually arranging microphones and loudspeakers based on heuristics. Those methods will not be further detailed here because microphone and loudspeaker layouts are interdependent
               </p>
             </div>
           </div>
@@ -471,7 +471,7 @@
                 <strong>Parametric</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
-                Propagation of the acoustic field is treated as if it were governed by rays
+                Process of microphone array signals in the time-frequency domain and estimate spatial parameters based on sound field models
               </p>
             </div>
           </div>
@@ -486,8 +486,7 @@
                 <strong>Non-parametric</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
-                Acoustic field is evaluated through the hypothesis that after some time from the initial conditions, the energy has spread and distributed homogeneously throughout the space
-              </p>
+                Linear transformation such as ambisonic. Input channels are encoded in the spherical harmonic domain and can further be decoded on any loudspeaker configuration </p>
             </div>
           </div>
         </div>
